--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*!
 Theme Name: Amp Reviews
-Theme URI: https://underscores.me/
+Theme URI: https://whoismattclark.com/
 Author: Automattic
 Author URI: https://automattic.com/
 Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
@@ -44,28 +44,25 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-/* normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-
+/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
 	 ========================================================================== */
-
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-
 html {
-	line-height: 1.15; /* 1 */
-	-webkit-text-size-adjust: 100%; /* 2 */
+	line-height: 1.15;
+	/* 1 */
+	-webkit-text-size-adjust: 100%;
+	/* 2 */
 }
 
 /* Sections
 	 ========================================================================== */
-
 /**
  * Remove the margin in all browsers.
  */
-
 body {
 	margin: 0;
 }
@@ -74,44 +71,42 @@ body {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-
 h1 {
 	font-size: 2em;
 	margin: 0.67em 0;
-	font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 /* Grouping content
 	 ========================================================================== */
-
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
-
 hr {
-	box-sizing: content-box; /* 1 */
-	height: 0; /* 1 */
-	overflow: visible; /* 2 */
+	box-sizing: content-box;
+	/* 1 */
+	height: 0;
+	/* 1 */
+	overflow: visible;
+	/* 2 */
 }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-
 pre {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
+	font-family: monospace, monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
 }
 
 /* Text-level semantics
 	 ========================================================================== */
-
 /**
  * Remove the gray background on active links in IE 10.
  */
-
 a {
 	background-color: transparent;
 }
@@ -120,17 +115,18 @@ a {
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
-
 abbr[title] {
-	border-bottom: none; /* 1 */
-	text-decoration: underline; /* 2 */
-	text-decoration: underline dotted; /* 2 */
+	border-bottom: none;
+	/* 1 */
+	text-decoration: underline;
+	/* 2 */
+	text-decoration: underline dotted;
+	/* 2 */
 }
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-
 b,
 strong {
 	font-weight: bolder;
@@ -140,18 +136,18 @@ strong {
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-
 code,
 kbd,
 samp {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
+	font-family: monospace, monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
 }
 
 /**
  * Add the correct font size in all browsers.
  */
-
 small {
 	font-size: 80%;
 }
@@ -160,7 +156,6 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-
 sub,
 sup {
 	font-size: 75%;
@@ -179,41 +174,41 @@ sup {
 
 /* Embedded content
 	 ========================================================================== */
-
 /**
  * Remove the border on images inside links in IE 10.
  */
-
 img {
 	border-style: none;
 }
 
 /* Forms
 	 ========================================================================== */
-
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-
 button,
 input,
 optgroup,
 select,
 textarea {
-	font-family: inherit; /* 1 */
-	font-size: 100%; /* 1 */
-	line-height: 1.15; /* 1 */
-	margin: 0; /* 2 */
+	font-family: inherit;
+	/* 1 */
+	font-size: 100%;
+	/* 1 */
+	line-height: 1.15;
+	/* 1 */
+	margin: 0;
+	/* 2 */
 }
 
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
-
 button,
-input { /* 1 */
+input {
+	/* 1 */
 	overflow: visible;
 }
 
@@ -221,16 +216,15 @@ input { /* 1 */
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
-
 button,
-select { /* 1 */
+select {
+	/* 1 */
 	text-transform: none;
 }
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
-
 button,
 [type="button"],
 [type="reset"],
@@ -241,7 +235,6 @@ button,
 /**
  * Remove the inner border and padding in Firefox.
  */
-
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -253,7 +246,6 @@ button::-moz-focus-inner,
 /**
  * Restore the focus styles unset by the previous rule.
  */
-
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
@@ -264,7 +256,6 @@ button:-moz-focusring,
 /**
  * Correct the padding in Firefox.
  */
-
 fieldset {
 	padding: 0.35em 0.75em 0.625em;
 }
@@ -275,20 +266,24 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *		`fieldset` elements in all browsers.
  */
-
 legend {
-	box-sizing: border-box; /* 1 */
-	color: inherit; /* 2 */
-	display: table; /* 1 */
-	max-width: 100%; /* 1 */
-	padding: 0; /* 3 */
-	white-space: normal; /* 1 */
+	box-sizing: border-box;
+	/* 1 */
+	color: inherit;
+	/* 2 */
+	display: table;
+	/* 1 */
+	max-width: 100%;
+	/* 1 */
+	padding: 0;
+	/* 3 */
+	white-space: normal;
+	/* 1 */
 }
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
-
 progress {
 	vertical-align: baseline;
 }
@@ -296,7 +291,6 @@ progress {
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
-
 textarea {
 	overflow: auto;
 }
@@ -305,17 +299,17 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-
 [type="checkbox"],
 [type="radio"] {
-	box-sizing: border-box; /* 1 */
-	padding: 0; /* 2 */
+	box-sizing: border-box;
+	/* 1 */
+	padding: 0;
+	/* 2 */
 }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
 	height: auto;
@@ -325,16 +319,16 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-
 [type="search"] {
-	-webkit-appearance: textfield; /* 1 */
-	outline-offset: -2px; /* 2 */
+	-webkit-appearance: textfield;
+	/* 1 */
+	outline-offset: -2px;
+	/* 2 */
 }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-
 [type="search"]::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
@@ -343,19 +337,18 @@ textarea {
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
-
 ::-webkit-file-upload-button {
-	-webkit-appearance: button; /* 1 */
-	font: inherit; /* 2 */
+	-webkit-appearance: button;
+	/* 1 */
+	font: inherit;
+	/* 2 */
 }
 
 /* Interactive
 	 ========================================================================== */
-
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
-
 details {
 	display: block;
 }
@@ -363,18 +356,15 @@ details {
 /*
  * Add the correct display in all browsers.
  */
-
 summary {
 	display: list-item;
 }
 
 /* Misc
 	 ========================================================================== */
-
 /**
  * Add the correct display in IE 10+.
  */
-
 template {
 	display: none;
 }
@@ -382,7 +372,6 @@ template {
 /**
  * Add the correct display in IE 10.
  */
-
 [hidden] {
 	display: none;
 }
@@ -405,6 +394,11 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
+	font-family: "Yanone Kaffeesatz";
+}
+
+h1 {
+	font-size: 48px;
 }
 
 p {
@@ -482,11 +476,11 @@ hr {
 }
 
 ul, ol {
-	margin: 0 0 1.5em 3em;
+	margin: 0;
 }
 
 ul {
-	list-style: disc;
+	list-style: square;
 }
 
 ol {
@@ -496,7 +490,8 @@ ol {
 li > ul,
 li > ol {
 	margin-bottom: 0;
-	margin-left: 1.5em;
+	margin-left: 0;
+	padding-left: 10px;
 }
 
 dt {
@@ -522,6 +517,28 @@ figure {
 table {
 	margin: 0 0 1.5em;
 	width: 100%;
+}
+
+.entry-meta, .entry-footer, .comment-metadata, .site-info {
+	font-size: 12px;
+	color: #808080;
+}
+
+.site-info {
+	float: right;
+	color: #fff;
+}
+
+.site-info a {
+	color: #dfb059;
+}
+
+.site-info a:visited {
+	color: #f0bfff;
+}
+
+.site-footer {
+	background-color: #808080;
 }
 
 /*--------------------------------------------------------------
@@ -616,6 +633,7 @@ textarea {
 --------------------------------------------------------------*/
 a {
 	color: royalblue;
+	text-decoration: none;
 }
 
 a:visited {
@@ -649,6 +667,8 @@ a:hover, a:active {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
+	/* The focus class is added by navigation.js */
+	/* The :focus-within is for non-JS contexts and AMP (all browsers except IE/Edge support) */
 }
 
 .main-navigation ul ul {
@@ -665,11 +685,22 @@ a:hover, a:active {
 	top: 0;
 }
 
-/* The focus class is added by navigation.js */
+.main-navigation ul ul li {
+	/* The focus class is added by navigation.js */
+	/* The :focus-within is for non-JS contexts and AMP (all browsers except IE/Edge support) */
+}
+
 .main-navigation ul ul li:hover > ul,
-.main-navigation ul ul li.focus > ul
-{
+.main-navigation ul ul li.focus > ul {
 	left: 100%;
+}
+
+.main-navigation ul ul li:focus-within > ul {
+	left: 100%;
+}
+
+.main-navigation ul ul a {
+	width: 200px;
 }
 
 .main-navigation ul li:hover > ul,
@@ -677,24 +708,14 @@ a:hover, a:active {
 	left: auto;
 }
 
-/*
- * Alternatives to focus class for supporting browsers (all but IE/Edge) for no-JS context (e.g. AMP)
- * See https://caniuse.com/#feat=css-focus-within
- */
-.main-navigation ul ul li:focus-within > ul {
-	left: 100%;
-}
 .main-navigation ul li:focus-within > ul {
 	left: auto;
-}
-
-.main-navigation ul ul a {
-	width: 200px;
 }
 
 .main-navigation li {
 	float: left;
 	position: relative;
+	/* The focus class is added by navigation.js */
 }
 
 .main-navigation a {
@@ -753,7 +774,8 @@ a:hover, a:active {
 	padding: 0;
 	position: absolute !important;
 	width: 1px;
-	word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
+	word-wrap: normal !important;
+	/* Many screen reader and browser combinations announce broken words as they would appear visually. */
 }
 
 .screen-reader-text:focus {
@@ -995,4 +1017,58 @@ object {
 
 .gallery-caption {
 	display: block;
+}
+
+/*--------------------------------------------------------------
+# Layout
+--------------------------------------------------------------*/
+.content-area {
+	margin: 0 auto;
+	width: 400px;
+}
+
+@media screen and (max-width: 500px) {
+	.content-area {
+		width: 100%;
+		padding: 0 10px;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.content-area {
+		width: 500px;
+	}
+}
+
+.site-content .widget-area {
+	margin: 0 auto;
+	width: 400px;
+}
+
+@media screen and (max-width: 500px) {
+	.site-content .widget-area {
+		width: 100%;
+		padding: 0 10px;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.site-content .widget-area {
+		width: 500px;
+	}
+}
+
+.site-footer {
+	clear: both;
+	width: 100%;
+}
+
+.no-sidebar .content-area {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.no-sidebar .site-main {
+	margin-right: 0;
 }
