--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -31,3 +31,24 @@ figure {
 }
 
 @import "tables";
+
+.entry-meta, .entry-footer, .comment-metadata, .site-info {
+	font-size: 12px;
+	color: #808080;
+}
+
+.site-info {
+	float: right;
+	color: #fff;
+}
+
+.site-info a {
+	color: rgb(223, 176, 89);
+	&:visited {
+		color: #f0bfff;
+	}
+}
+
+.site-footer {
+	background-color: #808080;
+}
