--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -8,13 +8,17 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+$color__link:#0D76D9;
+$color__link-visited:#BC1CF2;
+$color__link-hover: #0B64B7;
+$color__text-main: #383838;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+$color__accent-brand: #F5B854;
+$color__accent-triad1: #54a7f5;
+$color__accent-triad2: #cd54f5;
