--- a/sass/layout/_content-sidebar.scss
+++ b/sass/layout/_content-sidebar.scss
@@ -20,6 +20,8 @@
 	// width: $size__site-sidebar;
 	margin: 0 auto;
 	width: $size__site-main;
+	padding: 0 10px;
+
 	@media screen and (max-width: $break-small) {
 		width: 100%;
 		padding: 0 10px;
